background colour change in table.html

--- a/29 june/table.html
+++ b/29 june/table.html
@@ -22,7 +22,7 @@
             text-align: left;
         }
         th {
-            background-color: #70bec9;
+            background-color: #ff0000;
         }
     </style>
 </head>
