--- a/29 june/Portfolio/index.html
+++ b/29 june/Portfolio/index.html
@@ -13,7 +13,7 @@
 
             <ul>
                 <li><a href="#">HOME</a></li>
-                <li><a href="#">SERVICES</a></li>
+                <li><a href="#">EDUCATION</a></li>
                 <li><a href="#">CONTACT US</a></li>
                 <li><a href="#">ABOUT US</a></li>
             </ul>
@@ -28,5 +28,30 @@
                 I create <br> websites to do businesses to do better <br> online.</p>
         </div>
     </div>
+    <section>
+
+        <div class="education">
+        <div class="navbar">
+            <img src="LOGO1.png" class="logo">
+
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">EDUCATION</a></li>
+                <li><a href="#">CONTACT US</a></li>
+                <li><a href="#">ABOUT US</a></li>
+            </ul>
+        </div>
+        <div class="image">
+            <img src="img7-removebg-preview.png" class="Photo" width="600px" height="10px">
+        </div>
+        <div class="info">
+            <h2>Hi, I'm <br>Dhruvilsinh.</h2>
+            <h1>WEB DESIGNER</h1>
+            <p>Web designer and developer from Gujrat,INDIA. 
+                I create <br> websites to do businesses to do better <br> online.</p>
+        </div>
+        </div>
+
+    </section>
 </body>
 </html>
