--- a/2 july/index.html
+++ b/2 july/index.html
@@ -140,9 +140,9 @@
                   <input class="input" type="text" id="fullName" placeholder="Full Name" required>
                   <input class="input" type="email" id="email_id" placeholder="Email Address" required>
                   <input class="input" type="tel" id="phone_number" placeholder="Phone Number">
-                  <textarea class="input" id="message" placeholder="Have anything to say?"></textarea>
-                  <button type="button" onclick="SendMail(event)" class="btn input">Send</button>
-                </form>
+                  <textarea class="input" id="message" placeholder="Have anything to say?" required></textarea>
+                  <button type="submit" class="btn input">Send</button>
+              </form>
                 <div class="bubble bubble-1"></div>
                 <div class="bubble bubble-2"></div>
             </section>
