--- a/2 july/index.html
+++ b/2 july/index.html
@@ -149,8 +149,8 @@
 
             <footer>
                 <div class="footer-content">
-                  <span class="company-name">Company Name</span>
-                  <span class="copyright">Company © 2022 All Rights Reserved</span>
+                  <span class="company-name">DK IT TECH</span>
+                  <span class="copyright">DK IT TECH © 2022 All Rights Reserved</span>
                 </div>
               </footer>
 </body>
