--- a/3 July/index.html
+++ b/3 July/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Typing Practice Tutor</title>
     <style>
         :root {
@@ -26,19 +26,21 @@
 
         .main-container {
             width: 100%;
+            max-width: 800px;
             display: flex;
             justify-content: center;
             align-items: center;
             padding: 20px;
+            box-sizing: border-box;
         }
 
         .container {
             display: grid;
             grid-template-columns: 1fr;
             gap: 20px;
-            max-width: 800px;
-            width: 700px;
-            padding: 30px;
+            width: 100%;
+            max-width: 700px;
+            padding: 20px;
             background-color: #ffffff;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -50,10 +52,6 @@
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
-        }
-
-        .card:hover {
-            transform: translateY(-5px);
         }
 
         h1 {
@@ -83,7 +81,8 @@
         }
 
         #typing-area {
-            width: 680px;
+            width: 100%;
+            max-width: 680px;
             height: 100px;
             border: 2px solid var(--secondary-color);
             border-radius: 10px;
@@ -93,6 +92,7 @@
             color: var(--text-color);
             resize: none;
             transition: border-color 0.3s ease;
+            box-sizing: border-box;
         }
 
         #typing-area:focus {
@@ -103,8 +103,13 @@
         .stats {
             display: flex;
             justify-content: space-around;
+            flex-wrap: wrap;
             margin: 20px 0;
             font-size: 1.1rem;
+        }
+
+        .stats p {
+            margin: 5px 10px;
         }
 
         .history h2 {
@@ -148,12 +153,21 @@
             color: #ffffff;
             text-align: center;
             padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .timer-display {
             font-size: 3rem;
             font-weight: bold;
             margin-bottom: 15px;
+        }
+
+        .timer-controls {
+            display: flex;
+            align-items: center;
+            margin-top: 10px;
         }
 
         #timer-input {
@@ -192,6 +206,125 @@
             transform: translateY(1px);
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
+
+        #reset-btn {
+            margin-left: 10px;
+            height: auto;
+            font-size: 11px;
+            text-align: center;
+            align-items: center;
+            margin-top: 0;
+            background-color: #87bbff;
+            color: #ffffff;
+        }
+
+        #reset-btn:hover {
+            background-color: #22223b;
+        }
+
+        .backspace-toggle {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+
+        .backspace-toggle label {
+            margin-right: 10px;
+        }
+
+        .backspace-toggle input[type="checkbox"] {
+            transform: scale(1.5);
+            margin-right: 5px;
+        }
+
+        @media screen and (max-width: 768px) {
+            .container {
+                padding: 15px;
+            }
+
+            h1 {
+                font-size: 2rem;
+            }
+
+            #text-to-type {
+                font-size: 1rem;
+            }
+
+            #typing-area {
+                height: 80px;
+            }
+
+            .timer-display {
+                font-size: 2.5rem;
+            }
+
+            .restart-btn {
+                padding: 10px 20px;
+                font-size: 1rem;
+            }
+        }
+
+        @media screen and (max-width: 480px) {
+            .container {
+                padding: 10px;
+            }
+
+            h1 {
+                font-size: 1.8rem;
+            }
+
+            #text-to-type {
+                font-size: 0.9rem;
+            }
+
+            #typing-area {
+                height: 60px;
+                font-size: 0.9rem;
+            }
+
+            .timer-display {
+                font-size: 2rem;
+            }
+
+            .restart-btn {
+                padding: 8px 16px;
+                font-size: 0.9rem;
+            }
+
+            .stats {
+                font-size: 0.9rem;
+            }
+
+            .history h2 {
+                font-size: 1.2rem;
+            }
+
+            .history li {
+                font-size: 0.9rem;
+            }
+
+            .timer-controls {
+                flex-direction: column;
+            }
+
+            #reset-btn {
+                margin-left: 0;
+                margin-top: 10px;
+            }
+
+            .popup {
+                width: 90%;
+                padding: 20px;
+            }
+
+            .popup-content h2 {
+                font-size: 1.5rem;
+            }
+
+            .popup-content p {
+                font-size: 0.9rem;
+            }
+        }
     </style>
 </head>
 <body>
@@ -204,16 +337,22 @@
                 </div>
                 <div class="timer-controls">
                     <input type="number" id="timer-input" min="1" max="3600" value="60">
+                    <button id="reset-btn" class="restart-btn">Reset</button>
                 </div>
             </div>
             <div class="card" id="text-container">
                 <p id="text-to-type"></p>
+            </div>
+            <div class="card backspace-toggle">
+                <label for="backspace-toggle">Allow Backspace:</label>
+                <input type="checkbox" id="backspace-toggle" checked>
             </div>
             <textarea id="typing-area" placeholder="Start typing here..."></textarea>
             <div class="card stats">
                 <p>Errors: <span id="errors">0</span></p>
                 <p>WPM: <span id="wpm">0</span></p>
                 <p>CPM: <span id="cpm">0</span></p>
+                <p>Accuracy: <span id="accuracy">0%</span></p>
                 <p>Backspaces: <span id="backspaces">0</span></p>
             </div>
             <div class="card history">
@@ -225,7 +364,7 @@
         <div class="popup" id="result-popup">
             <div class="popup-content">
                 <h2>Practice Complete!</h2>
-                <p id="popup-message">Time: <span id="popup-time">0</span>s, Errors: <span id="popup-errors">0</span>, WPM: <span id="popup-wpm">0</span>, CPM: <span id="popup-cpm">0</span></p>
+                <p id="popup-message">Time: <span id="popup-time">0</span>s, Errors: <span id="popup-errors">0</span>, WPM: <span id="popup-wpm">0</span>, CPM: <span id="popup-cpm">0</span>, Accuracy: <span id="popup-accuracy">0%</span></p>
                 <button class="restart-btn" id="restart-btn">Restart</button>
             </div>
         </div>
@@ -237,8 +376,8 @@
                 "The quick brown fox jumps over the lazy dog.",
                 "A journey of a thousand miles begins with a single step.",
                 "To be or not to be, that is the question.",
-                "All that glitters is not gold.",
-                "The only thing we have to fear is fear itself."
+                "In the end, it's not the years in your life that count. It's the life in your years.",
+                "It is during our darkest moments that we must focus to see the light."
             ];
 
             const textToTypeElement = document.getElementById('text-to-type');
@@ -246,6 +385,7 @@
             const errorsElement = document.getElementById('errors');
             const wpmElement = document.getElementById('wpm');
             const cpmElement = document.getElementById('cpm');
+            const accuracyElement = document.getElementById('accuracy');
             const backspacesElement = document.getElementById('backspaces');
             const historyList = document.getElementById('history-list');
             const resultPopup = document.getElementById('result-popup');
@@ -253,14 +393,18 @@
             const popupErrors = document.getElementById('popup-errors');
             const popupWPM = document.getElementById('popup-wpm');
             const popupCPM = document.getElementById('popup-cpm');
+            const popupAccuracy = document.getElementById('popup-accuracy');
             const restartBtn = document.getElementById('restart-btn');
+            const resetBtn = document.getElementById('reset-btn');
             const timerInput = document.getElementById('timer-input');
             const minutesElement = document.getElementById('minutes');
             const secondsElement = document.getElementById('seconds');
+            const backspaceToggle = document.getElementById('backspace-toggle');
 
             let timer = 0;
             let errors = 0;
             let totalErrors = 0;
+            let totalCharacters = 0;
             let interval;
             let startTime;
             let currentText = '';
@@ -291,6 +435,24 @@
                 }, 1000);
             }
 
+            function resetPractice() {
+                clearInterval(interval);
+                typingArea.value = '';
+                typingArea.disabled = false;
+                errors = 0;
+                totalErrors = 0;
+                totalCharacters = 0;
+                timerStarted = false;
+                startTime = null;
+                typedCharacters = 0;
+                previousLength = 0;
+                backspaceCount = 0;
+                timer = parseInt(timerInput.value, 10);
+                updateTimerDisplay();
+                updateStats();
+                startPractice();
+            }
+
             function startPractice() {
                 currentText = texts[Math.floor(Math.random() * texts.length)];
                 textToTypeElement.innerHTML = currentText.split('').map(char => `<span>${char}</span>`).join('');
@@ -301,6 +463,7 @@
                 timer = userSetTime;
                 errors = 0;
                 totalErrors = 0;
+                totalCharacters = 0;
                 timerStarted = false;
                 startTime = null;
                 typedCharacters = 0;
@@ -319,10 +482,10 @@
 
                 const typedText = typingArea.value;
                 const textSpans = textToTypeElement.querySelectorAll('span');
-                
+
                 typedCharacters = typedText.length;
 
-                // Count errors and backspaces
+                // Count errors, accuracy, and backspaces
                 if (typedText.length < previousLength) {
                     backspaceCount++;
                 } else if (typedText.length > previousLength) {
@@ -334,6 +497,15 @@
                 }
 
                 previousLength = typedText.length;
+
+                // Update total characters
+                totalCharacters = typedCharacters;
+
+                // Calculate accuracy
+                if (totalCharacters > 0) {
+                    const accuracy = ((totalCharacters - totalErrors) / totalCharacters) * 100;
+                    accuracyElement.textContent = accuracy.toFixed(2) + '%';
+                }
 
                 textSpans.forEach((span, index) => {
                     if (index < typedText.length) {
@@ -369,6 +541,7 @@
                 const timeInMinutes = (endTime - startTime) / 60000;
                 const { wpm, cpm } = calculateWPMAndCPM(typedCharacters, timeInMinutes);
                 displayPopup(timeInMinutes * 60, totalErrors, wpm, cpm);
+                totalCharacters += currentText.length;
             }
 
             function updateStats() {
@@ -382,20 +555,22 @@
 
             function calculateWPMAndCPM(characters, timeInMinutes) {
                 const words = characters / 5;
-                const wpm = timeInMinutes > 0 ? Math.round((words / timeInMinutes)) : 0;
-                const cpm = timeInMinutes > 0 ? Math.round((characters / timeInMinutes)) : 0;
+                const wpm = timeInMinutes > 0 ? Math.round(words / timeInMinutes) : 0;
+                const cpm = timeInMinutes > 0 ? Math.round(characters / timeInMinutes) : 0;
                 return { wpm, cpm };
             }
 
             function displayPopup(time, errors, wpm, cpm) {
+                const accuracy = totalCharacters > 0 ? ((totalCharacters - errors) / totalCharacters) * 100 : 0;
                 popupTime.textContent = time.toFixed(2);
                 popupErrors.textContent = errors;
                 popupWPM.textContent = wpm;
                 popupCPM.textContent = cpm;
+                popupAccuracy.textContent = accuracy.toFixed(2) + '%';
                 resultPopup.style.display = 'block';
-                
+
                 const historyItem = document.createElement('li');
-                historyItem.textContent = `Time: ${time.toFixed(2)}s, Errors: ${errors}, WPM: ${wpm}, CPM: ${cpm}`;
+                historyItem.textContent = `Time: ${time.toFixed(2)}s, Errors: ${errors}, WPM: ${wpm}, CPM: ${cpm}, Accuracy: ${accuracy.toFixed(2)}%`;
                 historyList.appendChild(historyItem);
             }
 
@@ -403,6 +578,22 @@
                 resultPopup.style.display = 'none';
                 startPractice();
             });
+
+            resetBtn.addEventListener('click', resetPractice);
+
+            backspaceToggle.addEventListener('change', () => {
+                if (!backspaceToggle.checked) {
+                    typingArea.addEventListener('keydown', handleBackspace);
+                } else {
+                    typingArea.removeEventListener('keydown', handleBackspace);
+                }
+            });
+
+            function handleBackspace(e) {
+                if (!backspaceToggle.checked && e.key === 'Backspace') {
+                    e.preventDefault();
+                }
+            }
 
             startPractice();
         });
